feat: implemented carousel in higlights section and fixed links for navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,9 +143,13 @@
   * {
     @apply border-border outline-ring/50;
     @apply border-border outline-ring/50;
+    @apply scroll-smooth;
   }
   body {
     @apply bg-background text-foreground;
     @apply bg-background text-foreground;
+  }
+  section {
+    @apply max-w-7xl mx-auto;
   }
 }
