feat: finished website outline with all elements, I need to fix mobile responsivness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,6 +150,6 @@
     @apply bg-background text-foreground;
   }
   section {
-    @apply max-w-7xl mx-auto;
+    @apply max-w-7xl mx-auto scroll-mt-7;
   }
 }
